Bug fix of dark mode in inputs

--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -13,6 +13,7 @@ input[type=search],
 input[type=email],
 input[type=tel],
 input[type=url] {
+  background-color: var(--color-neutral-0);
   border: 1px solid var(--color-neutral-30);
   border-radius: var(--border-radius-default);
   color: inherit;
