--- a/src/components/FormTextarea/FormTextarea.css
+++ b/src/components/FormTextarea/FormTextarea.css
@@ -12,6 +12,7 @@ textarea {
   resize: vertical;
   vertical-align: top;
   line-height: var(--line-height-30);
+  background-color: var(--color-neutral-0);
   border: 1px solid var(--color-neutral-30);
   border-radius: var(--border-radius-default);
   color: inherit;
